# linc

./: .gitignore  010_getting_started.html  015_intake.html  020_headers.html  030_ir.html  050_symbols.html  060_filtering.html  070_link_surface.html  080_macros_and_layouts.html  090_validation.html  095_native_evidence.html  100_api_contract.html  110_workflows.html  115_contracts_and_policy.html  120_json_compatibility.html  130_error_surface.html  140_error_taxonomy.html  150_field_stability.html  160_failure_model.html  170_schema_review.html  180_platform_support.html  190_stable_usage_patterns.html  200_fol_integration.html  205_operations_and_release.html  210_macro_semantics.html  220_support_tiers.html  230_unsupported_cases.html  240_fol_minimal_contract.html  250_fol_extended_contract.html  260_cross_repo_versioning.html  270_reproducibility.html  280_link_resolution_boundary.html  290_release_checklist.html  295_hermeticity_matrix.html  300_readiness_scorecard.html  310_contract_change_checklist.html  404.html  Cargo.toml  Makefile  README.md  (+8 more)
book/: book.toml
book/src/: 010_getting_started.md  015_intake.md  020_headers.md  030_ir.md  040_codegen.md  050_symbols.md  060_filtering.md  070_link_surface.md  080_macros_and_layouts.md  090_validation.md  095_native_evidence.md  100_api_contract.md  bic.md  (+27 more)
src/: analysis.rs  codegen_rust.rs  diagnostics.rs  error.rs  extract.rs  ir.rs  lib.rs  line_markers.rs  link_plan.rs  main.rs  preprocess.rs  probe.rs  raw_headers.rs  symbols.rs  validate.rs
test/: corpus.rs
tests/: cli.rs  corpus.rs  daemon_examples.rs  failure_matrix_link.rs  failure_matrix_validation.rs  fol_acceptance.rs  hermetic_artifact_fixtures.rs  library_examples.rs  linux_examples.rs  public_api.rs  regressions.rs  torture_examples.rs  windows_examples.rs
(+71 files in other folders)
