[package]
name = "bic"
version = "0.1.0"
edition = "2021"
description = "C binding and ABI extraction layer on top of pac"
license = "MIT/Apache-2.0"

[dependencies]
pac = { path = "../pac" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
object = { version = "0.36", default-features = false, features = ["read", "elf"] }

[[test]]
name = "corpus"
path = "test/corpus.rs"
