[package]
name = "bic"
version = "0.1.0"
edition = "2021"
authors = ["Trim Bresilla"]
description = "C binding and ABI extraction layer on top of pac"
license = "MIT/Apache-2.0"
keywords = ["c", "ffi", "bindings", "parser"]
categories = ["development-tools::ffi", "parser-implementations"]

[features]
default = ["symbols"]
symbols = ["dep:object"]

[dependencies]
pac = { git = "https://github.com/follang/pac" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
object = { version = "0.36", default-features = false, features = ["read", "elf", "macho", "coff", "pe"], optional = true }

[[test]]
name = "corpus"
path = "test/corpus.rs"
