[package]
name = "linc"
version = "0.1.0"
edition = "2021"
authors = ["Trim Bresilla"]
description = "Link-surface, symbol-inventory, validation, and ABI-evidence layer for C interop"
license = "MIT/Apache-2.0"
keywords = ["c", "ffi", "linker", "symbols", "abi"]
categories = ["development-tools::ffi"]

[features]
default = ["symbols"]
symbols = ["dep:object"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
object = { version = "0.36", default-features = false, features = ["read", "elf", "macho", "coff", "pe"], optional = true }

[dev-dependencies]
parc = { path = "../parc" }